# givme

./: .gitignore  Cargo.toml  README.md  database.db  diesel.toml
migrations/2024-12-21-141804_create_credentails/: down.sql  up.sql
src/: cred.rs  encryption.rs  io.rs  lib.rs  main.rs  os.rs  sql.rs  sql1.rs  structs.rs  utils.rs
src/commands/: decrypt_file.rs  decrypt_value.rs  delete_value.rs  encrypt_file.rs  get_value.rs  init_tool.rs  mod.rs  save_value.rs
src/config/: loader.rs  mod.rs
src/models/: credentials.rs  dependencies.rs  enums.rs  error.rs  givme.rs  mod.rs  services.rs
src/services/: encryption.rs  mod.rs  sql.rs
src/utils/: args.rs  helpers.rs  io.rs  logger.rs  mod.rs  schema.rs
