[package]
edition = "2018"
name = "givme"
version = "0.1.1"
description = "A password manager built in Rust that is simple to use and safe"
repository = "https://github.com/ParampreetR/givme.git"
license = "Apache-2.0"

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
home = "0.5.3"
lazy_static = "1.4.0"
nettle = "7.0.2"
rand = "0.8.4"
rpassword = "5.0.1"
sqlite = "0.26.0"
whoami = "1.1.5"
fern = "0.7.0"
humantime = "2.1.0"
log = "0.4.22"
dirs = "5.0.1"




